[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/Enimegos/PolicialEscudoAndando_02.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Enimigos/ACABshield.gd" type="Script" id=2]
[ext_resource path="res://assets/Enimegos/PolicialEscudoAndando_03.png" type="Texture" id=3]
[ext_resource path="res://assets/Enimegos/PolicialEscudoAndando_01.png" type="Texture" id=4]
[ext_resource path="res://assets/Enimegos/PolicialEscudoAtirando_02.png" type="Texture" id=5]
[ext_resource path="res://assets/Enimegos/PolicialEscudoAtirando_03.png" type="Texture" id=6]
[ext_resource path="res://assets/Enimegos/PolicialEscudoAtirando_01.png" type="Texture" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 47.3237, 72 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 5 ), ExtResource( 6 ) ],
"loop": true,
"name": "TiroPol",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 1 ), ExtResource( 3 ) ],
"loop": true,
"name": "AndandoPol",
"speed": 5.0
} ]

[node name="ACABSiheld" type="KinematicBody2D"]
position = Vector2( 64.6763, 0 )
collision_layer = 16
collision_mask = 9
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="TimerBurst" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="TimerTiro" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="TimerAndar" type="Timer" parent="."]
wait_time = 2.5
one_shot = true
autostart = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "AndandoPol"
playing = true
[connection signal="timeout" from="TimerBurst" to="." method="_on_TimerBurst_timeout"]
[connection signal="timeout" from="TimerTiro" to="." method="_on_TimerTiro_timeout"]
[connection signal="timeout" from="TimerAndar" to="." method="_on_TimerAndar_timeout"]
